center events and groups vertically

--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,11 @@ ion-note.list-note {
   white-space: pre-line;
   hyphens: auto;
 }
+
+.center-horizontally {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+  box-sizing: border-box;
+  width: 100%;
+}
