--- a/src/pages/tabs/Groups.css
+++ b/src/pages/tabs/Groups.css
@@ -1,5 +1,6 @@
-.fab-padding {
-  margin: 16px;
+ion-fab.fab-padding {
+  bottom: 16px;
+  right: 16px;
 }
 
 ion-fab-button {
@@ -13,6 +14,21 @@ ion-fab-button:hover {
 /* Group list styling */
 IonCard {
   position: relative;
+}
+
+.group-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.group-list ion-card {
+  flex: 1 1 300px;
+  max-width: 360px;
+  min-width: 260px;
 }
 
 .group-card-header {
